boreal/tests/assets/invalid_files/compilation/invalid_type2.yar
rule a {
    condition:
        for any i in (true, false): (i)
}
